Replace List.of() with Arrays.asList() - Java 8 compatibility