@@ -1,5 +1,6 @@
 package bg.startit.hackathon.airquiality.model;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import javax.persistence.Column;
@@ -54,7 +55,7 @@ public class User implements UserDetails {
 
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return List.of(new SimpleGrantedAuthority("user"));
+    return Arrays.asList(new SimpleGrantedAuthority("user"));
   }
 
   @Override
